arquivos/api-produto/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: dev 
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4.2.8
        ports:
        - containerPort: 27017
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: dev 
spec:
  selector:
    matchLabels:
      app: api
  template: 
    metadata:       
      labels:
        app: api
    spec:            
      containers:
      - name: api
        image: kubedevio/api-produto:v1
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: dev 
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30023
  type: LoadBalancer


# endereço para acessar aplicação: http://localhost:30023/api-docs/
