arquivos/api-produto/deploymentappp.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: teste
spec:
  replicas: 4
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: fabricioveronez/rotten-postatoes:v1
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: teste
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30021
  type: LoadBalancer
