arquivos/api-produto/deploymentservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: teste
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:5.0.5
        ports:
          - containerPort: 27017
---


apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: teste
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
    type: ClusterIP
